--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ html{
     border-radius: .2rem;
     padding: 1.4rem 0;
     outline: none;
+    border:none;
     color: #d1d1d1;
     background-color: rgb(49, 50, 50);
     box-shadow: 0px 1px 2px 1px  rgb(49, 49, 49);
